--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <link href="styles.css" rel="stylesheet" type="text/css">
-    <p style="text-align: right;"> 
+    <p style="text-align: right;">
         <strong>Dr. Eleanor Gaye</strong><br>
         Awesome Science Faculty<br>
         University of Awesome<br>
@@ -39,7 +39,9 @@
     </ul>
     <p>Please let me know if this is okay, and if so, which start date you would prefer.</p>
 
-    <p>You can find more information about important university dates on our website.</p>
+    <p>You can find more information about important university dates on our website: 
+        <a href="http://www.universityofawesome.edu/dates">Important University Dates</a>.
+    </p>
 
     <p><strong>Subjects of study</strong></p>
 
@@ -61,7 +63,9 @@
         <li>Arctic robot dance: An interesting example of historic misinformation, English explorers in the 1960s believed they had discovered a new dance style characterized by "robotic", stilted movements, practiced by inhabitants of Northern Alaska and Canada. Later on, however, it was discovered that they were just moving like this because they were really cold.</li>
     </ul>
 
-    <p>For more of my research, see my exotic dance research page.</p>
+    <p>For more of my research, see my 
+        <a href="http://www.universityofawesome.edu/exotic-dances">exotic dance research page</a>.
+    </p>
 
     <p>Yours sincerely,<br>
         Dr. Eleanor Gaye<br>
@@ -79,3 +83,4 @@
 </body>
 
 </html>
+
